--- a/htdocs/langs/en_US/members.lang
+++ b/htdocs/langs/en_US/members.lang
@@ -76,8 +76,11 @@ DeleteAMemberType=Delete a member type
 ConfirmDeleteMemberType=Are you sure you want to delete this member type?
 MemberTypeDeleted=Member type deleted
 MemberTypeCanNotBeDeleted=Member type can not be deleted
-NewSubscription=New contribution
-NewSubscriptionDesc=This form allows you to record your subscription as a new member of the foundation. If you want to renew your subscription (if already a member), please contact foundation board instead by email %s.
+NewSubscriptionTitle=Get membership
+NewSubscriptionRenewalTitle=Renew or update membership
+NewSubscriptionDesc=You can get your membership at %s by subscribing here.<br>If you are a former member, <a href="%s">search for your e-mail</a> to renew your membership without interruption or update your informations.<br>Contact us at %s to get help.
+NewSubscriptionRenewDesc=You can renew your membership at %s or only update your personal information without renewal.<br><b>Make sure that all informations are up to date</b> before validating.<br>Contact us at %s to get help. 
+InvalidRenewalLink=This membership renewal link has expired or is invalid. <a href="%s">Click here</a> to get a new link by searching your e-mail address. Contact us at %s if you need help.
 Subscription=Subscription
 AnyAmountWithAdvisedAmount=Any amount with a recommended amount of %s %s
 AnyAmountWithoutAdvisedAmount=Any amount
@@ -86,6 +89,10 @@ CanEditAmountDetail=If yes, the type amount is only an advised amount and the me
 CanEditAmountShortForValues=recommended, any amount
 MembershipDuration=Duration
 GetMembershipButtonLabel=Get membership
+RenewMembershipButtonLabel=Renew membership
+UpdateMembershipInfo=Save updates
+CannotEditMemberInfo=Cannot update without renewal
+CannotEditMemberInfoLong=Your membership type has changed or is no longer valid. You cannot update your personal information without membership renewal. Contact us if it looks abnormal.
 Subscriptions=Subscriptions
 SubscriptionLate=Late
 SubscriptionNotReceived=Contribution never received
@@ -113,7 +120,10 @@ DeleteSubscription=Delete a subscription
 ConfirmDeleteSubscription=Are you sure you want to delete this contribution?
 Filehtpasswd=htpasswd file
 ValidateMember=Validate a member
+SearchMember=Search for a member
 ConfirmValidateMember=Are you sure you want to validate this member?
+ConfirmSearchMember=We are going to send an e-mail to %s. You will receive a link to renew your existing membership or update your member informations without renewal. Do you want to proceed?
+SearchResultSentByMail=We have sent a message to the given e-mail %s with a link to create, renew, or update your subscription. <br><br><b>Check your mailbox to resume.</b> Also check your Junk folder.
 FollowingLinksArePublic=The following links are open pages not protected by any Dolibarr permission. They are not formatted pages, provided as example to show how to list members database.
 PublicMemberList=Public member list
 BlankSubscriptionForm=Public self-registration form
@@ -134,14 +144,19 @@ SubscriptionNotRecorded=Subscription not recorded
 AddSubscription=Create subscription
 ShowSubscription=Show subscription
 YouCanHaveUnlimitedMembershipDuration=Although membership duration is typically 1 year, you can select any duration or make it unlimited if this field is left empty.
+MembershipTypeNoLongerAvailableShort=Choose a new member type
+MembershipTypeNoLongerAvailable=Your former member type is no longer available, please pick a new one
+ToOfferALinkForOnlineRenewal=URL for membership renewal or personal information update (URL valid during 72hr)
 # Label of email templates
-SendingAnEMailToMember=Sending information email to member
-SendingEmailOnAutoSubscription=Sending email on auto registration
-SendingEmailOnMemberValidation=Sending email on new member validation
-SendingEmailOnNewSubscription=Sending email on new contribution
-SendingReminderForExpiredSubscription=Sending reminder for expired contributions
-SendingEmailOnCancelation=Sending email on cancelation
-SendingReminderActionComm=Sending reminder for agenda event
+SendingAnEMailToMember=Inform the member by e-mail
+SendingEmailOnAutoSubscription=Send an e-mail on auto registration
+SendingEmailOnMemberValidation=Send an e-mail on new member validation
+SendingEmailOnNewSubscription=Send an e-mail on new subscription
+SendingReminderForExpiredSubscription=Send a reminder for expired subscriptions
+SendingEmailOnCancelation=Send an e-mail on cancelation
+SendingReminderActionComm=Send a reminder for agenda event
+SendingAnEMailToMemberEMailSearchFound=Membership request with a found e-mail address
+SendingAnEMailToMemberEMailSearchNotFound=New membership with a not found e-mail address
 # Topic of email templates
 YourMembershipRequestWasReceived=Your membership was received.
 YourMembershipWasValidated=Your membership was validated
@@ -149,15 +164,22 @@ YourSubscriptionWasRecorded=Your new contribution was recorded
 SubscriptionReminderEmail=contribution reminder
 YourMembershipWasCanceled=Your membership was canceled
 CardContent=Content of your member card
+NewMembershipRequestReceived=Resume your membership request
 # Text of email templates
 ThisIsContentOfYourMembershipRequestWasReceived=We want to let you know that your membership request was received.<br><br>
 ThisIsContentOfYourMembershipWasValidated=We want to let you know that your membership was validated with the following information:<br><br>
-ThisIsContentOfYourSubscriptionWasRecorded=We want to let you know that your new subscription was recorded. Please find your invoice here enclosed.<br><br>
+ThisIsContentOfYourSubscriptionWasRecorded=We want to let you know that your new subscription was recorded, your membership is now . Please find your invoice here enclosed.<br><br>
 ThisIsContentOfSubscriptionReminderEmail=We want to let you know that your subscription is about to expire or has already expired (__MEMBER_LAST_SUBSCRIPTION_DATE_END__). We hope you will renew it.<br><br>
 ThisIsContentOfYourCard=This is a summary of the information we have about you. Please contact us if anything is incorrect.<br><br>
-DescADHERENT_AUTOREGISTER_NOTIF_MAIL_SUBJECT=Subject of the notification email received in case of auto-inscription of a guest
-DescADHERENT_AUTOREGISTER_NOTIF_MAIL=Content of the notification email received in case of auto-inscription of a guest
-DescADHERENT_EMAIL_TEMPLATE_AUTOREGISTER=Email template to use to send email to a member on member auto-registration
+ThisIsContentOfEMailSearchBody=We have received a membership request to __MYCOMPANY_NAME__ for your e-mail address. 
+ThisIsContentOfEMailSearchFound=We have found that your e-mail address matches an existing member. In order to renew your existing membership or update your informations, follow this link valid during 72 hours:<br>
+ThisIsContentOfEMailSearchNotFound=In order to get a new membership, follow this link:<br>
+TeamSignature=The __MYCOMPANY_NAME__ team
+DescADHERENT_EMAIL_TEMPLATE_SEARCHED_AND_FOUND=Email template to send a membership renewal link if a matching e-mail has been found
+DescADHERENT_EMAIL_TEMPLATE_SEARCHED_AND_NOT_FOUND=Email template to send a new membership link if no matching e-mail has been found
+DescADHERENT_AUTOREGISTER_NOTIF_MAIL_SUBJECT=Subject of the notification email received in case of self-registration of a guest
+DescADHERENT_AUTOREGISTER_NOTIF_MAIL=Content of the notification email received in case of self-registration of a guest
+DescADHERENT_EMAIL_TEMPLATE_AUTOREGISTER=Email template to use to send email to a member on member self-registration
 DescADHERENT_EMAIL_TEMPLATE_MEMBER_VALIDATION=Email template to use to send email to a member on member validation
 DescADHERENT_EMAIL_TEMPLATE_SUBSCRIPTION=Email template to use to send email to a member on new contribution recording
 DescADHERENT_EMAIL_TEMPLATE_REMIND_EXPIRATION=Email template to use to send email reminder when contribution is about to expire
@@ -209,6 +231,8 @@ MemberNature=Nature of the member
 MembersNature=Nature of the members
 Public=Information is public
 NewMemberbyWeb=Your membership request has been recorded. We will review it soon. If it is validated, your membership will actually start and you will receive your member card.
+RenewMemberbyWeb=Your membership renewal request has been recorded. We will review it soon. If it is validated, your membership will pursue with no interruption and you will receive your new member card.
+UpdatedMemberbyWeb=Your member informations have been updated sucessfully.
 NewMemberForm=New member form
 SubscriptionsStatistics=Contributions statistics
 NbOfSubscriptions=Number of contributions
@@ -230,6 +254,7 @@ EmailSentToMember=Email sent to member at %s
 SendReminderForExpiredSubscriptionTitle=Send reminder by email for expired contributions
 SendReminderForExpiredSubscription=Send reminder by email to members when contribution is about to expire (parameter is number of days before end of membership to send the remind. It can be a list of days separated by a semicolon, for example '10;5;0;-5')
 MembershipPaid=Membership paid for current period (until %s)
+MembershipExpired=Membership expired (since %s)
 YouMayFindYourInvoiceInThisEmail=You may find your invoice attached to this email
 XMembersClosed=%s member(s) closed
 XExternalUserCreated=%s external user(s) created
